--- a/src/photo.html
+++ b/src/photo.html
@@ -24,7 +24,7 @@
         src="https://images.unsplash.com/photo-1546994372-f636adc59e4e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2550&q=80"
         alt="Vibes" class="banner__img">
 
-      <div class="banner__auther">
+      <div class="banner__author">
         <h1>Elena Morell</h1>
         <h3>Photographer</h3>
       </div>
@@ -52,6 +52,13 @@
     <div class="work">
       <div class="work__description">
         <h3>My Work</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt accusantium officia minima quae.
+          Eos non cum reiciendis reprehenderit dolores rem, rerum iusto ullam, cupiditate illo quaerat vitae voluptas.
+          Eligendi temporibus ex a fugit quisquam!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maiores expedita eveniet excepturi! Hic
+          voluptates quibusdam similique rerum iusto, assumenda soluta quae iste quidem quaerat culpa nihil nam expedita
+          veritatis, esse dolores nesciunt distinctio sed.</p>
       </div>
 
       <div class="work__gallery">
@@ -74,6 +81,8 @@
           src="https://images.unsplash.com/photo-1568452377412-3d3df56285fd?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2000&q=80"
           alt="Work">
       </div>
+    </div>
+
     </div>
 
   </main>
