Add media queries

--- a/src/photo.html
+++ b/src/photo.html
@@ -62,24 +62,14 @@
       </div>
 
       <div class="work__gallery">
-        <img
-          src="https://images.unsplash.com/photo-1515283709260-ee29296f1534?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2294&q=80"
-          alt="Work">
-        <img
-          src="https://images.unsplash.com/flagged/photo-1579396757584-820c398c708f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2000&q=80"
-          alt="Work">
-        <img
-          src="https://images.unsplash.com/photo-1543507129-0d5571b71162?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2001&q=80"
-          alt="Work">
-        <img
-          src="https://images.unsplash.com/photo-1565791380717-b3cff7dc78de?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2001&q=80"
-          alt="Work">
-        <img
-          src="https://images.unsplash.com/photo-1538371979595-e3af963e41c9?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2000&q=80"
-          alt="Work">
-        <img
-          src="https://images.unsplash.com/photo-1568452377412-3d3df56285fd?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2000&q=80"
-          alt="Work">
+
+        <img src="assets/g1.jpeg" alt="work">
+        <img src="assets/g2.jpeg" alt="work">
+        <img src="assets/g3.jpeg" alt="work">
+        <img src="assets/g4.jpeg" alt="work">
+        <img src="assets/g5.jpeg" alt="work">
+        <img src="assets/g6.jpeg" alt="work">
+
       </div>
     </div>
 
