--- a/src/photo.html
+++ b/src/photo.html
@@ -19,6 +19,7 @@
 
   <main>
 
+    <!-- Banner section -->
     <div class="banner">
       <img
         src="https://images.unsplash.com/photo-1546994372-f636adc59e4e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2550&q=80"
@@ -30,6 +31,7 @@
       </div>
     </div>
 
+    <!-- Story section -->
     <div class="story">
       <div class="story__description">
         <h3>My Story</h3>
@@ -49,6 +51,7 @@
       </div>
     </div>
 
+    <!-- Work section -->
     <div class="work">
       <div class="work__description">
         <h3>My Work</h3>
@@ -61,22 +64,20 @@
           veritatis, esse dolores nesciunt distinctio sed.</p>
       </div>
 
+      <!-- Image Gallery -->
       <div class="work__gallery">
-
         <img src="assets/g1.jpeg" alt="work">
         <img src="assets/g2.jpeg" alt="work">
         <img src="assets/g3.jpeg" alt="work">
         <img src="assets/g4.jpeg" alt="work">
         <img src="assets/g5.jpeg" alt="work">
         <img src="assets/g6.jpeg" alt="work">
-
       </div>
     </div>
 
     </div>
 
   </main>
-
 
 </body>
 
