--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="assets/styles.css">
-  <script defer src="assets/index.js"></script>
+  <script defer type="module" src="assets/index.js"></script>
 
   <title>Dimiri Marco</title>
 </head>
